@@ -1,5 +1,12 @@
 2012-06-06  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* Makefile.util.def (grub-mkrescue) Anable on mips_qemu_mips and
+	ia64.
+	* util/grub-mkrescue.in: Handle qemu-mips and ia64. Add missing
+	quotes while on it.
+
+2012-06-06  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/kern/mips/qemu_mips/init.c (grub_exit): Implement.
 	(grub_halt): Likewise.
 	* grub-core/lib/mips/qemu_mips/reboot.c (grub_reboot): Likewise.
